# novaya-lyada

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  QUICK_START.md  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  тонкости.txt
.github/workflows/: deploy.yml
media/book/: assemble_book_with_images.txt
nl_website/: README.md  cert.crt  manage.py  pytest.ini
nl_website/about_village/: models.py  urls.py  views.py
nl_website/accounts/: urls.py
nl_website/adventrisement/: apps.py
nl_website/advertisement/: admin.py  apps.py  tasks.py  urls.py  views.py
nl_website/core/: urls.py  views.py
nl_website/events/: admin.py  forms.py  models.py  urls.py  views.py
nl_website/events/migrations/: 0001_initial.py
nl_website/ideas/migrations/: 0002_improvementidea_author_alter_improvementidea_status.py
nl_website/nl_website/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nl_website/places/: admin.py  models.py
nl_website/static/css/: style.css
nl_website/templates/: about.html  base.html  index.html  terms.html
nl_website/tests/: test_models.py
nl_website/users/: forms.py  models.py  urls.py  views.py
requirements/: base.txt  development.txt  production.txt
scripts/: backup_db.sh  deploy.sh  restore_db.sh  setup_server.sh
templates/: about_village.html  base.html  privacy.html
templates/account/: login.html  password_reset.html  profile.html  signup.html
website_about_novaya_lyada/: asgi.py  celery.py  urls.py  wsgi.py
website_about_novaya_lyada/settings/: base.py  development.py  production.py
(+68 files in other folders)
